--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
         "assets-webpack-plugin": "3.9.10",
         "clean-webpack-plugin": "3.0.0",
         "copy-webpack-plugin": "5.1.1",
+        "cross-env": "7.0.0",
         "html-webpack-plugin": "3.2.0",
         "hugo-bin": "^0.51.2",
         "lodash": "4.17.15",
