--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
         "lodash": "4.17.15",
         "mini-css-extract-plugin": "0.9.0",
         "npm-run-all": "^4.1.5",
+        "optimize-css-assets-webpack-plugin": "5.0.3",
         "source-map-loader": "0.2.4",
         "ts-loader": "^6.2.1",
         "typescript": "^3.7.5",
