--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "themes/universal"]
 	path = themes/universal
 	url = https://github.com/devcows/hugo-universal-theme.git
+[submodule "themes/yuki"]
+	path = themes/yuki
+	url = https://github.com/iCyris/hugo-theme-yuki
