--- a/config.toml
+++ b/config.toml
@@ -1,91 +1,71 @@
-baseURL = "http://example.org/"
-defaultContentLanguage = "en"
-disqusShortname = ""
-googleAnalytics = ""
-languageCode = "en-uk"
+baseurl = "/"
+languageCode = "en-us"
+title = "Hugo Theme Yuki"
+theme = "hugo-theme-yuki"
+author = "Cyris"
+
+# Copyright notice. This will display on the footer.
+copyright = ""
 paginate = 10
-theme = "universal"
-title = "Yoga Site"
-[Permalinks]
-blog = "/blog/:year/:month/:day/:filename/"
-[[menu.main]]
-identifier = "contact"
-name = "Contact"
-url = "/contact/"
-weight = 3
-[[menu.main]]
-identifier = "blog"
-name = "Blog"
-url = "/blog/"
-weight = 2
-[[menu.main]]
-identifier = "home"
-name = "Home"
-url = "/"
-weight = 1
-[[menu.topbar]]
-name = "Email"
-pre = "<i class='fas fa-2x fa-envelope'></i>"
-url = "mailto:your@email.com"
-weight = 3
-[[menu.topbar]]
-name = "Twitter"
-pre = "<i class='fab fa-2x fa-twitter'></i>"
-url = "http://twitter.com"
-weight = 2
-[[menu.topbar]]
-name = "Facebook"
-pre = "<i class='fab fa-2x fa-facebook'></i>"
-url = "http://facebook.com"
-weight = 1
+
+# Theme config
 [params]
-about_us = "<p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.</p>"
-address = "<p class=\"text-uppercase\"><strong>Universal Ltd.</strong>\n        <br>13/25 New Avenue\n        <br>Newtown upon River\n        <br>45Y 73J\n        <br>England\n        <br>\n        <strong>Great Britain</strong>\n      </p>\n      "
-author = "DevCows"
-contact_form_ajax = false
-copyright = "Copyright (c) 2015 - 2016, YourCompany; all rights reserved."
-date_format = "January 2, 2006"
-defaultDescription = "Site template made by devcows using hugo"
-defaultKeywords = ["devows", "hugo", "go"]
-default_sharing_image = "img/sharing-default.png"
-email = "your@email.com"
-facebook_site = ""
-googleMapsApiKey = "AIzaSyCFhtWLJcE30xOAjcbSFi-0fnoVmQZPb1Y"
-latitude = "-12.043333"
-logo = "img/logo.png"
-logo_small = "img/logo-small.png"
-longitude = "-77.028333"
-mainSections = ["blog"]
-style = "green"
-twitter_site = "GoHugoIO"
-viewMorePostLink = "/blog/"
-[params.carousel]
-enable = true
-[params.clients]
-enable = false
-subtitle = ""
-title = "Our Clients"
-[params.features]
-enable = true
-[params.recent_posts]
-enable = true
-subtitle = "Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo."
-title = "From our blog"
-[params.see_more]
-enable = true
-icon = "far fa-file-alt"
-link_text = "Check other homepages"
-link_url = "#"
-subtitle = "We have prepared for you more than 40 different HTML pages, including 5 variations of homepage."
-title = "Do you want to see more?"
-[params.testimonials]
-enable = false
-subtitle = "We have worked with many clients and we always like to hear they come out from the cooperation happy and satisfied. Have a look what our clients said about us."
-title = "Testimonials"
-[params.topbar]
-enable = false
-text = "<p class=\"hidden-sm hidden-xs\">Contact us on +420 777 555 333 or hello@universal.com.</p>\n      <p class=\"hidden-md hidden-lg\"><a href=\"#\" data-animate-hover=\"pulse\"><i class=\"fas fa-phone\"></i></a>\n      <a href=\"#\" data-animate-hover=\"pulse\"><i class=\"fas fa-envelope\"></i></a>\n      </p>\n      "
-[params.widgets]
-categories = true
-search = true
-tags = true
+
+  # The content you want to be listed on list pages.
+  mainSections = ["post"]
+
+  # The information will display on the post pages.
+  author = "Author"
+  description = "Short description"
+  authorwebsite = "https://example.com/"
+
+  # The path to your images
+  favicon = "images/logo.png"
+  logo = "images/logo.png"
+  avatar = ""
+  displayImg = "images/display.png"
+
+  # This will display on the index page
+  snsTitle = "Social"
+
+  # Google Analytics API key.
+  ga_api_key = "Your Google Analytics tracking id"
+
+# Navbar config
+[[menu.nav]]
+    name = "HOME"
+    url = "/"
+    weight = 1
+
+[[menu.nav]]
+    name = "BLOG"
+    url = "/post"
+    weight = 2
+
+[[menu.nav]]
+    name = "ABOUT"
+    url = "/about"
+    weight = 3
+
+[[menu.nav]]
+    name = "TAGS"
+    url = "/tags/"
+    weight = 4
+
+# Social accounts config (This will display on the index page)
+[[menu.social]]
+    name = "Example-1"
+    url = "/"
+    weight = 1
+
+[[menu.social]]
+    name = "Example-2"
+    url = "/"
+    weight = 2
+
+[[menu.social]]
+    name = "Example-3"
+    url = "/"
+    weight = 3
+
+
